Add tests and divide OrderService